--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ z-index: 100;
 }
 .nav-logo span {
     position: absolute;
-    top: -15px;
+    top: -10px;
     right: -20px;
     font-size: 5em;
     color: var(--text-color-second);
@@ -179,11 +179,13 @@ z-index: 100;
     padding-left: 20px;
 }
 .featured-text-card span {
+    position: relative;
     background: var(--third-color);
     color: var(--color-white);
     padding: 3px 8px;
     font-size: 12px;
     border-radius: 5px;
+    top: 20px;
 }
 .featured-name {
     font-size: 50px;
@@ -331,14 +333,14 @@ object-fit: cover;
     border-radius: 20px;
 }
 .about-info p {
-    text-align: center;
+    text-align: justify;
     font-size: 15px;
     color: #777;
 }
 .about-btn button {
-    position: absolute;
-    right: 15px;
-    bottom: 20px;
+    position: relative;
+    /* right: 20px; */
+    top: 30px;
     border-radius: 30px;
 }
 .about-btn button:hover {
@@ -494,11 +496,9 @@ textarea {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--second-color);
-    color: white;
 }
 .form-button .btn:hover {
-background: #2d2197;
+background: var(--second-color);
 }
 .form-button i {
     font-size: 18px;
